@@ -1,5 +1,9 @@
 2001-09-23  John Levon  <moz@compsoc.man.ac.uk>
 
+	* pp/oprofpp.c: small cleanup
+ 
+2001-09-23  John Levon  <moz@compsoc.man.ac.uk>
+
 	* oprofile.h:
 	* op_x86.c: support for 2.4.10
  
